--- a/FE/angular/src/styles/components/_movie.scss
+++ b/FE/angular/src/styles/components/_movie.scss
@@ -4,10 +4,10 @@
     max-width: 800px;
     margin-bottom: 28px;
     padding: $mainFontSize;
-    flex-direction: column;
     background: $paleGray;
     border-radius: $radius;
     border: 2px solid $darkerGray;
+    display: flex;
 
     .image {
       padding-right: 30px;
@@ -25,7 +25,7 @@
         font-family: $fontStackAccent;
         font-size: $headerFontSize;
         font-weight: $fontWeightBold;
-        height: $wideSpace;
+        padding-bottom: $narrowPaddingSpace;
         border-bottom: 1px solid $darkGray;
       }
       .details,
